app/Connector/packages/connector-theme/sass/var/Component.scss
/* ... */
.cds-started .x-panel-body-default {
  border-width: 0;
}

text.study-label {
  cursor: pointer;
}

.started-section-title {
  margin-bottom: 35px;
}

.expanded-intro {
  .started-section-title {
    margin-left: 28px;
    display: inline-block;
  }
}

.started-dismiss {
  float: right;
  padding-right: 28px;
}

.started-show {
  margin-left: 28px;
}

.get-started-multiRow {
  height: fit-content;
  margin-left: auto;
  margin-right: auto;
  .started-row-2 {
    .tile-title {
      margin-top: 10px;
      margin-bottom: 30px;
      text-align: center;
    }
  }
}

.get-started-singleRow {
  height: 380px;
  margin-left: auto;
  margin-right: auto;
}

.get-started {
  background-color: #f0f0f0;

    .started-count {
      font-weight: 700;
    }
    .tile-group {
      width: 100%;
      margin-left: auto;
      margin-right: auto;
    }
    .tile {
      width: 200px;
      margin-bottom: auto;
      margin-left: auto;
      margin-right: auto;
    }
    .tile-image {
      padding-top: 20px;
      width: 25%;
      padding-left: 7%;
    }

    .tile-title {
      white-space:nowrap;
      padding-bottom: 15px
    }

    .tile-detail {
      width: 25%;
      text-align: left;
      vertical-align: top;
    }

    .tile-detail-static {
      padding-bottom: 5px;
    }
    .backgroundimage {
      height: 200px;
      width: 200px;
      background-size: 100%;
      margin-bottom: 30px;
    }
    .home_integrated_data {
      background-image: url('images/home_integrated_data.png');
    }
    .home_bar {
      background-image: url('images/home_bars.png');
    }
    .home_try_it_out {
      background-image: url('images/try_it_out.png');
    }
    .home_video {
      background-image: url('images/home_video.png');
    }
}

.toolslinks-panel {
  .header {
    padding: 14px 18px 14px 9px;
    height: 60px !important;
    .x-panel-body {
      height: 32px !important;
    }
    .x-box-inner {
      height: 32px !important;
    }

    .toolslinks-title {
      font: 17px Georgia,serif;
      position: absolute !important;
      top: 4px !important;
    }

  }

  .#{$connector-prefix}panel-body {
    background-color: $heat-scale-6;
  }

  .#{$connector-prefix}form-textarea {
    height: 390px;
  }

  .footer {
    padding-right: 20px;
  }

  .toolslinks-body {
    color: $gray-4;
    padding: 10px 20px 10px 10px;
    height: 532px !important;
    .x-scroll-bar-y {
      width: 0; /*CHANGE: replace width: 6px;*/
    }
    overflow-y: auto;
    background-color: $heat-scale-6;
    .x-form-focus {
      border-color: $gray-4!important;
      color: $black;
    }

    td {
      vertical-align: text-top;
      padding-right: 2em;
      padding-bottom: 1em;
    }

    p {
      margin-bottom: 20px;
      margin-top: 20px;
    }

    h3 {
      margin-bottom: 20px;
      margin-top: 20px;
      font: 16px Georgia,serif;
      color: black;
    }

  }

}
  @import 'windows';

  @import 'grid/Panel';

  @import 'panel/FilterPanel';
  @import 'panel/GroupList';
  @import 'panel/Selector';

  @import 'plugin/LoadingMask';

  @import 'view/DetailStatus';
  @import 'view/Header';
  @import 'view/InfoPane';
  @import 'view/Learn';
  @import 'view/Navigation';
  @import 'view/Page';
  @import 'view/Chart';
  @import 'view/Signin';
  @import 'view/SingleAxisExplorer';
  @import 'view/Summary';
  @import 'view/TermsOfUse';
  @import 'view/Variable';

